--- a/products.css
+++ b/products.css
@@ -180,7 +180,7 @@ p {
 
 /* Hero Section */
 .hero-section {
-    background: linear-gradient(to top left, rgba(0, 0, 0, 0.8), rgba(128, 0, 0, 0.7)), url('static/images/oilboom.jpg') no-repeat center center/cover;
+    background: linear-gradient(to top left, rgba(0, 0, 0, 0.8), rgba(128, 0, 0, 0.7)), url('static/booms.jpg') no-repeat center center/cover;
     height: 75vh; /* Increased height */
     display: flex;
     align-items: center;
@@ -384,7 +384,9 @@ p {
 
 
 
-
+.content-section h2{
+    text-align: start;
+}
 
 
 /* Footer Section Styles */
