--- a/imotrainlvl.css
+++ b/imotrainlvl.css
@@ -10,7 +10,7 @@
         }
         
         .hero-section {
-            background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.6), rgba(128, 0, 0, 0.7)), url('static/images/training2.webp') no-repeat center center/cover;
+            background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.6), rgba(128, 0, 0, 0.7)), url('static/training2.jpg') no-repeat center center/cover;
             height: 80vh;
             display: flex;
             align-items: center;
